--- a/contact/index.html
+++ b/contact/index.html
@@ -70,10 +70,10 @@
                 </li>
                 <div class="d-flex flex-lg-row flex-column">
                     <li class="nav-item active">
-                        <a class="nav-link" href="/">Beranda <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="../">Beranda <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/about">Tentang</a>
+                        <a class="nav-link" href="../about">Tentang</a>
                     </li>
 
                     <li class="nav-item dropdown">
@@ -81,8 +81,8 @@
                           Menu Spesial
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <a class="dropdown-item" href="/special-menus#special-dishes-1">Daging Sapi Saus Steak</a>
-                          <a class="dropdown-item" href="/special-menus#special-dishes-2">Salmon Zucchini</a>
+                          <a class="dropdown-item" href="../special-menus#special-dishes-1">Daging Sapi Saus Steak</a>
+                          <a class="dropdown-item" href="../special-menus#special-dishes-2">Salmon Zucchini</a>
                         </div>
                     </li>
                 </div>
@@ -94,13 +94,13 @@
             <ul class="navbar-nav d-flex justify-content-between">
                 <div class="d-flex flex-lg-row flex-column">
                     <li class="nav-item active">
-                        <a class="nav-link" href="/menus">Menu</a>
+                        <a class="nav-link" href="../menus">Menu</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link" href="/reservation">Reservasi</a>
+                        <a class="nav-link" href="../reservation">Reservasi</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link" href="/contact">Contact</a>
+                        <a class="nav-link" href="../contact">Contact</a>
                     </li>
                 </div>
                 <li class="nav-item">
