--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                           Menu Spesial
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <a class="dropdown-item" href="/special-menus#special-dishes-1">Daging Sapi Saus Steak</a>
-                          <a class="dropdown-item" href="/special-menus#special-dishes-2">Salmon Zucchini</a>
+                          <a class="dropdown-item" href="./special-menus#special-dishes-1">Daging Sapi Saus Steak</a>
+                          <a class="dropdown-item" href="./special-menus#special-dishes-2">Salmon Zucchini</a>
                         </div>
                     </li>
                 </div>
@@ -94,13 +94,13 @@
             <ul class="navbar-nav d-flex justify-content-between">
                 <div class="d-flex flex-lg-row flex-column">
                     <li class="nav-item active">
-                        <a class="nav-link" href="/menus">Menu</a>
+                        <a class="nav-link" href="./menus">Menu</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link" href="/reservation">Reservasi</a>
+                        <a class="nav-link" href="./reservation">Reservasi</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link" href="/contact">Contact</a>
+                        <a class="nav-link" href="./contact">Contact</a>
                     </li>
                 </div>
                 <li class="nav-item">
@@ -117,7 +117,7 @@
 		<div class="col-lg-6 hero-left">
 		    <h1 class="display-4 mb-5">Kami Punya <br>Makanan-makanan Enak!</h1>
 		    <div class="mb-2">
-		    	<a class="btn btn-primary btn-shadow btn-lg" href="/menus" role="button">Lihat Menu</a>
+		    	<a class="btn btn-primary btn-shadow btn-lg" href="./menus" role="button">Lihat Menu</a>
 			    <!-- <a class="btn btn-icon btn-lg" href="https://player.vimeo.com/video/33110953" data-featherlight="iframe" data-featherlight-iframe-allowfullscreen="true">
 			    	<span class="lnr lnr-film-play"></span>
 			    	Play Video
